# execution-specs

./: .editorconfig  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  EIP_AUTHORS_MANUAL.md  LICENSE  LICENSE.md  Mermaid_Ink-pyproject.Pyp  NoCopyRight.si  README.md  README.si  RELEASING.md  SECURITY.md  TODO.md  __init__.py  b2t.sh  codecov.yml  conftest.py  debug.sh  github  logger.cfg  logger.py  main.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest-eest.ini  pytest-framework.ini  pytest.ini  setup.cfg  setup.py  toggle_precompile_endianess.py  tox.ini  tutorial.md  vulture_whitelist.py  whitelist.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: incorrect-documentation.md  incorrect-specification.md  tooling-problem.md
.github/workflows/: codeql.yml  gh-pages.yaml  test.yaml
.vim/: coc-settings.json
Network Upgrade Retrospective/: Report Template.md
Notes/: Notes for EIP-1559 Gas API Call (Breakout #10).md
Pyproject.py/: Mermaid_ink.Pyp
benchmark/: conftest.py  helpers.py  test_worst_blocks.py  test_worst_bytecode.py  test_worst_compute.py  test_worst_memory.py  test_worst_opcode.py  test_worst_stateful_opcodes.py
berlin/: __init__.py
berlin/eip2929_gas_cost_increases/: __init__.py  test_precompile_warming.py
berlin/eip2930_access_list/: __init__.py  spec.py  test_acl.py  test_tx_intrinsic_gas.py
byzantium/: __init__.py
byzantium/eip198_modexp_precompile/: __init__.py  helpers.py  test_modexp.py
cancun/: __init__.py
cancun/eip1153_tstore/: __init__.py  conftest.py  spec.py  test_basic_tload.py  test_tload_calls.py  test_tload_reentrancy.py  test_transient_storage_create_contexts.py  test_transient_storage_execution_contexts.py  test_tstorage.py  test_tstore_reentrancy.py  (+5 more)
cli/: __init__.py  check_fixtures.py  compare_fixtures.py  eofwrap.py  evm_bytes.py  evm_bytes_to_python.py  extract_config.py  gen_index.py  generate_checklist_stubs.py  gentest.py  hasher.py  order_fixtures.py  pytest_commands.py  show_pre_alloc_group_stats.py  tox_helpers.py
client-integration-testnets/: YOLOv2.md  YOLOv3.md  aleut.md
config/: __init__.py  app.py  docs.py  env.py
constantinople/: __init__.py
doc/: conf.py  index.rst  stage0.rst
docs/: .pages  01_state_transition_tutorial.md  gen_filler_pages.py  index.md  navigation.md  rtdio_requirements.txt
eest_tests/: conftest.py
eips/: __init__.py  test_eip3651.py  test_eip3855.py  test_eip3860.py
entry_points/: create_whitelist_for_flake8_spelling.py  evm_bytes_to_python.py  fill.py  hasher.py  markdownlintcli2_soft_fail.py  order_fixtures.py  pyspelling_soft_fail.py  tf.py
ethereum-test-filler/: main.py
ethereum_clis/: __init__.py  ethereum_cli.py  file_utils.py  transition_tool.py  types.py
ethereum_evm_t8n/: runner.py
ethereum_test/: __init__.py  base_test.py  blockchain_test.py  code.py  common.py  decorators.py  fill.py  filler.py  fixture.py  fork.py  helpers.py  state_test.py  types.py
ethereum_test_base_types/: __init__.py  base_types.py  composite_types.py  constants.py  conversions.py  json.py  mixins.py  pydantic.py
ethereum_test_checklists/: __init__.py  eip_checklist.py
ethereum_test_exceptions/: __init__.py  engine_api.py  evmone_exceptions.py  exception_mapper.py  exceptions.py
ethereum_test_execution/: __init__.py  base.py  blob_transaction.py  transaction_post.py
ethereum_test_filler/: main.py
ethereum_test_filling_tool/: __init__.py  filler.py  main.py  modules.py
ethereum_test_fixtures/: __init__.py  base.py  blockchain.py  collector.py  common.py  consume.py  eof.py  file.py  formats.py  pre_alloc_groups.py  shared_alloc.py  state.py  transaction.py  verify.py
ethereum_test_forks/: __init__.py  base_decorators.py  base_fork.py  gas_costs.py  helpers.py  transition_base_fork.py
ethereum_test_rpc/: __init__.py  rpc.py  types.py
ethereum_test_specs/: __init__.py  base.py  base_static.py  blobs.py  blockchain.py  debugging.py  eof.py  helpers.py  state.py  transaction.py
ethereum_test_tools/: __init__.py
ethereum_test_types/: __init__.py  account_types.py  blob_types.py  block_types.py  helpers.py  receipt_types.py  request_types.py  transaction_types.py  trie.py  types.py  utils.py
ethereum_test_vm/: __init__.py  bytecode.py  evm_types.py  helpers.py  opcode.py
evm_block_builder/: __init__.py
evm_transition_tool/: __init__.py  besu.py  ethereumjs.py  evmone.py  execution_specs.py  file_utils.py  geth.py  nimbus.py  transition_tool.py  types.py
example/: __init__.py  test_acl_example.py  test_yul_example.py
execution_tests_filling_tool/: main.py
execution_tests_library/: __init__.py
fillers/: __init__.py  conftest.py
frontier/: __init__.py
homestead/: __init__.py
istanbul/: __init__.py
json-rpc/: README.md  eth_blockNumber.md  eth_call.md  eth_gasPrice.md  eth_getBalance.md  getBlockNumber.md  spec.json
merge/: __init__.py
network-upgrades/: 015-paris.md  016-shanghai.md  README.md  berlin.md  ecosystem-readiness.md  london-ecosystem-readiness.md  london.md
osaka/: __init__.py
paris/: __init__.py
prague/: __init__.py
pytest_plugins/: __init__.py  concurrency.py  eels_resolutions.json  eels_resolver.py  forks.py  latest_fork.py  test_filler.py  working_directory.py
scripts/: b2t.sh  download_geth_linux.py  gen_genesis_config.go
security/: __init__.py  test_selfdestruct_balance_bug.py
shanghai/: __init__.py
spec/: eth_types.py  evm.py  main.py  requirements.txt  rlp.py  spec.py  trie.py
src/: logger.cfg
static/: README.md  custom.css
tests/: conftest.py  helpers.py  test_base_types.py  test_ethash.py  test_ethash_general.py  test_genesis.py  test_number.py  test_optimized_state.py  test_rlp.py  test_spec.py  test_t8n.py  test_tools.py  test_tools_new_fork.py  test_trace.py  test_trie.py  test_validate_header.py
tf/: main.py
vm/: test_chain_id.py  test_chainid.py  test_dup.py
withdrawals/: test_withdrawals.py
zkevm/: conftest.py  test_worst_blocks.py  test_worst_bytecode.py  test_worst_compute.py  test_worst_opcode.py  test_worst_stateful_opcodes.py
(+42603 files in other folders)
