[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ethereum-execution"
description = "Ethereum execution layer specification, provided as a Python package for tooling and testing"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
license = "CC0-1.0"
urls = { "Homepage" = "https://github.com/ethereum/execution-specs" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]
dependencies = [
    "pycryptodome>=3.22,<4",
    "coincurve>=20,<21",
    "typing_extensions>=4.4",
    "py-ecc>=8.0.0b2,<9",
    "ethereum-types>=0.2.4,<0.3",
    "ethereum-rlp>=0.1.4,<0.2",
    "cryptography>=45.0.1,<46",
    "ethereum-execution-spec-tests @ git+https://github.com/ethereum/execution-spec-tests@0fdd974b0968e443ef5878430ba5194c43149a4b",
    "ethereum-spec-evm-resolver @ git+https://github.com/petertdavies/ethereum-spec-evm-resolver",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "ethereum_spec_tools",
    "ethereum_spec_tools.evm_tools",
    "ethereum_spec_tools.evm_tools.t8n",
    "ethereum_spec_tools.evm_tools.t8n.evm_trace",
    "ethereum_spec_tools.evm_tools.b11r",
    "ethereum_spec_tools.evm_tools.statetest",
    "ethereum_spec_tools.evm_tools.loaders",
    "ethereum_spec_tools.lint",
    "ethereum_spec_tools.lint.lints",
    "ethereum",
    "ethereum.state_oracle",
    "ethereum.frontier",
    "ethereum.frontier.utils",
    "ethereum.frontier.vm",
    "ethereum.frontier.vm.instructions",
    "ethereum.frontier.vm.precompiled_contracts",
    "ethereum.utils",
    "ethereum.crypto",
    "ethereum_optimized",
    "ethereum.homestead",
    "ethereum.homestead.utils",
    "ethereum.homestead.vm",
    "ethereum.homestead.vm.instructions",
    "ethereum.homestead.vm.precompiled_contracts",
    "ethereum.dao_fork",
    "ethereum.dao_fork.utils",
    "ethereum.dao_fork.vm",
    "ethereum.dao_fork.vm.instructions",
    "ethereum.dao_fork.vm.precompiled_contracts",
    "ethereum.tangerine_whistle",
    "ethereum.tangerine_whistle.utils",
    "ethereum.tangerine_whistle.vm",
    "ethereum.tangerine_whistle.vm.instructions",
    "ethereum.tangerine_whistle.vm.precompiled_contracts",
    "ethereum.spurious_dragon",
    "ethereum.spurious_dragon.utils",
    "ethereum.spurious_dragon.vm",
    "ethereum.spurious_dragon.vm.instructions",
    "ethereum.spurious_dragon.vm.precompiled_contracts",
    "ethereum.byzantium",
    "ethereum.byzantium.utils",
    "ethereum.byzantium.vm",
    "ethereum.byzantium.vm.instructions",
    "ethereum.byzantium.vm.precompiled_contracts",
    "ethereum.constantinople",
    "ethereum.constantinople.utils",
    "ethereum.constantinople.vm",
    "ethereum.constantinople.vm.instructions",
    "ethereum.constantinople.vm.precompiled_contracts",
    "ethereum.istanbul",
    "ethereum.istanbul.utils",
    "ethereum.istanbul.vm",
    "ethereum.istanbul.vm.instructions",
    "ethereum.istanbul.vm.precompiled_contracts",
    "ethereum.muir_glacier",
    "ethereum.muir_glacier.utils",
    "ethereum.muir_glacier.vm",
    "ethereum.muir_glacier.vm.instructions",
    "ethereum.muir_glacier.vm.precompiled_contracts",
    "ethereum.berlin",
    "ethereum.berlin.utils",
    "ethereum.berlin.vm",
    "ethereum.berlin.vm.instructions",
    "ethereum.berlin.vm.precompiled_contracts",
    "ethereum.london",
    "ethereum.london.utils",
    "ethereum.london.vm",
    "ethereum.london.vm.instructions",
    "ethereum.london.vm.precompiled_contracts",
    "ethereum.arrow_glacier",
    "ethereum.arrow_glacier.utils",
    "ethereum.arrow_glacier.vm",
    "ethereum.arrow_glacier.vm.instructions",
    "ethereum.arrow_glacier.vm.precompiled_contracts",
    "ethereum.gray_glacier",
    "ethereum.gray_glacier.utils",
    "ethereum.gray_glacier.vm",
    "ethereum.gray_glacier.vm.instructions",
    "ethereum.gray_glacier.vm.precompiled_contracts",
    "ethereum.paris",
    "ethereum.paris.utils",
    "ethereum.paris.vm",
    "ethereum.paris.vm.instructions",
    "ethereum.paris.vm.precompiled_contracts",
    "ethereum.shanghai",
    "ethereum.shanghai.utils",
    "ethereum.shanghai.vm",
    "ethereum.shanghai.vm.instructions",
    "ethereum.shanghai.vm.precompiled_contracts",
    "ethereum.cancun",
    "ethereum.cancun.utils",
    "ethereum.cancun.vm",
    "ethereum.cancun.vm.instructions",
    "ethereum.cancun.vm.precompiled_contracts",
    "ethereum.prague",
    "ethereum.prague.utils",
    "ethereum.prague.vm",
    "ethereum.prague.vm.instructions",
    "ethereum.prague.vm.precompiled_contracts",
    "ethereum.prague.vm.precompiled_contracts.bls12_381",
    "ethereum.osaka",
    "ethereum.osaka.utils",
    "ethereum.osaka.vm",
    "ethereum.osaka.vm.instructions",
    "ethereum.osaka.vm.precompiled_contracts",
    "ethereum.osaka.vm.precompiled_contracts.bls12_381",
]

[tool.setuptools.package-data]
"ethereum" = [
    "py.typed",
    "assets/mainnet.json",
    "assets/mainnet_genesis_alloc_rlp.hex",
    "assets/cache_sizes_2048_epochs.json",
    "assets/dataset_sizes_2048_epochs.json",
    "assets/blocks/block_1.json",
    "assets/blocks/block_1234567.json",
    "assets/blocks/block_12964999.json",
]
"ethereum_spec_tools" = ["py.typed"]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
    "pytest-cov>=4.1.0,<5",
    "pytest-xdist>=3.3.1,<4",
    "GitPython>=3.1.0,<3.2",
    "filelock>=3.15.1,<4",
    "requests",
    "requests-cache>=1.2.1,<2",
]

lint = [
    "isort==5.13.2",
    "mypy==1.17.0",
    "black==23.12.0",
    "flake8==6.1.0",
    "flake8-bugbear==23.12.2",
    "flake8-docstrings==1.7.0",
    "flake8-spellcheck==0.28.0",
    "flake8-unused-arguments==0.0.13",
    "vulture==2.14.0",
]

tools = [
    "platformdirs>=4.2,<5",
]
doc = [
    "docc>=0.3.0,<0.4.0",
    "fladrif>=0.2.0,<0.3.0",
]
optimized = [
    "rust-pyspec-glue>=0.0.9,<0.1.0",
    "ethash>=1.1.0,<2",
]


[tool.setuptools.dynamic]
version = { attr = "ethereum.__version__" }

[project.scripts]
ethereum-spec-lint = "ethereum_spec_tools.lint:main"
ethereum-spec-sync = "ethereum_spec_tools.sync:main"
ethereum-spec-new-fork = "ethereum_spec_tools.new_fork:main"
ethereum-spec-patch = "ethereum_spec_tools.patch_tool:main"
ethereum-spec-evm = "ethereum_spec_tools.evm_tools:main"
ethereum-spec-fill = "cli.pytest_commands.fill:fill"

[project.entry-points."docc.plugins"]
"ethereum_spec_tools.docc.discover" = "ethereum_spec_tools.docc:EthereumDiscover"
"ethereum_spec_tools.docc.build" = "ethereum_spec_tools.docc:EthereumBuilder"
"ethereum_spec_tools.docc.fix-indexes" = "ethereum_spec_tools.docc:FixIndexTransform"
"ethereum_spec_tools.docc.minimize-diffs" = "ethereum_spec_tools.docc:MinimizeDiffsTransform"

[project.entry-points."docc.plugins.html"]
"ethereum_spec_tools.docc:DiffNode" = "ethereum_spec_tools.docc:render_diff"
"ethereum_spec_tools.docc:BeforeNode" = "ethereum_spec_tools.docc:render_before_after"
"ethereum_spec_tools.docc:AfterNode" = "ethereum_spec_tools.docc:render_before_after"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.black]
line-length = 79

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "bigmem: marks tests as big memory (deselect with '-m \"not bigmem\"')",
    "evm_tools: marks tests as evm_tools (deselect with '-m \"not evm_tools\"')",
    "json_blockchain_tests: marks tests as json_blockchain_tests (deselect with '-m \"not json_blockchain_tests\"')",
    "json_state_tests: marks tests as json_state_tests (deselect with '-m \"not json_state_tests\"')",
    "vm_test: marks tests as vm_test (deselect with '-m \"not vm_test\"')",
]

[tool.coverage.run]
omit = [
    "*/ethereum/*_glacier/*",
    "*/ethereum/dao_fork/*",
]

[tool.docc]
context = [
    "docc.references.context",
    "docc.search.context",
    "docc.html.context",
]

discovery = [
    "docc.search.discover",
    "docc.html.discover",
    "docc.python.discover",
    "ethereum_spec_tools.docc.discover",
    "docc.listing.discover",
    "docc.files.discover",
]

build = [
    "docc.search.build",
    "ethereum_spec_tools.docc.build",
    "docc.files.build",
    "docc.listing.build",
    "docc.resources.build",
]

transform = [
    "docc.python.transform",
    "docc.verbatim.transform",
    "docc.mistletoe.transform",
    "docc.mistletoe.reference",
    "ethereum_spec_tools.docc.fix-indexes",
    "ethereum_spec_tools.docc.minimize-diffs",
    "docc.references.index",
    "docc.search.transform",
    "docc.html.transform",
]

[tool.docc.plugins."docc.python.transform"]
excluded_references = [
    "ethereum_spec_tools.lint.lints",   # This is a namespace package.
]

[tool.docc.plugins."docc.python.discover"]
paths = [
    "src",
]

excluded_paths = [
    "src/ethereum_optimized",
    "src/ethereum_spec_tools",
]

[tool.docc.plugins."docc.html.context"]
extra_css = [
    "static/custom.css",
]

[tool.docc.plugins."docc.files.discover"]
files = [
    "static/custom.css",
]

[tool.docc.output]
path = "docs"
extension = ".html"
