[metadata]
name = ethereum
description = Ethereum specification, provided as a Python package for tooling and testing
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: ethereum.__version__
url = https://github.com/ethereum/execution-specs
license_files =
    LICENSE.md
classifiers =
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication

[options]
packages =
    ethereum_spec_tools
    ethereum_spec_tools/evm_tools
    ethereum_spec_tools/evm_tools/t8n
    ethereum_spec_tools/evm_tools/b11r
    ethereum_spec_tools/evm_tools/statetest
    ethereum_spec_tools/evm_tools/loaders
    ethereum_spec_tools/lint
    ethereum_spec_tools/lint/lints
    ethereum
    ethereum/frontier
    ethereum/frontier/utils
    ethereum/frontier/vm
    ethereum/frontier/vm/instructions
    ethereum/frontier/vm/precompiled_contracts
    ethereum/utils
    ethereum/crypto
    ethereum_optimized/
    ethereum/homestead
    ethereum/homestead/utils
    ethereum/homestead/vm
    ethereum/homestead/vm/instructions
    ethereum/homestead/vm/precompiled_contracts
    ethereum/dao_fork
    ethereum/dao_fork/utils
    ethereum/dao_fork/vm
    ethereum/dao_fork/vm/instructions
    ethereum/dao_fork/vm/precompiled_contracts
    ethereum/tangerine_whistle
    ethereum/tangerine_whistle/utils
    ethereum/tangerine_whistle/vm
    ethereum/tangerine_whistle/vm/instructions
    ethereum/tangerine_whistle/vm/precompiled_contracts
    ethereum/spurious_dragon
    ethereum/spurious_dragon/utils
    ethereum/spurious_dragon/vm
    ethereum/spurious_dragon/vm/instructions
    ethereum/spurious_dragon/vm/precompiled_contracts
    ethereum/byzantium
    ethereum/byzantium/utils
    ethereum/byzantium/vm
    ethereum/byzantium/vm/instructions
    ethereum/byzantium/vm/precompiled_contracts
    ethereum/constantinople
    ethereum/constantinople/utils
    ethereum/constantinople/vm
    ethereum/constantinople/vm/instructions
    ethereum/constantinople/vm/precompiled_contracts
    ethereum/istanbul
    ethereum/istanbul/utils
    ethereum/istanbul/vm
    ethereum/istanbul/vm/instructions
    ethereum/istanbul/vm/precompiled_contracts
    ethereum/muir_glacier
    ethereum/muir_glacier/utils
    ethereum/muir_glacier/vm
    ethereum/muir_glacier/vm/instructions
    ethereum/muir_glacier/vm/precompiled_contracts
    ethereum/berlin
    ethereum/berlin/utils
    ethereum/berlin/vm
    ethereum/berlin/vm/instructions
    ethereum/berlin/vm/precompiled_contracts
    ethereum/london
    ethereum/london/utils
    ethereum/london/vm
    ethereum/london/vm/instructions
    ethereum/london/vm/precompiled_contracts
    ethereum/arrow_glacier
    ethereum/arrow_glacier/utils
    ethereum/arrow_glacier/vm
    ethereum/arrow_glacier/vm/instructions
    ethereum/arrow_glacier/vm/precompiled_contracts
    ethereum/gray_glacier
    ethereum/gray_glacier/utils
    ethereum/gray_glacier/vm
    ethereum/gray_glacier/vm/instructions
    ethereum/gray_glacier/vm/precompiled_contracts
    ethereum/paris
    ethereum/paris/utils
    ethereum/paris/vm
    ethereum/paris/vm/instructions
    ethereum/paris/vm/precompiled_contracts
    ethereum/shanghai
    ethereum/shanghai/utils
    ethereum/shanghai/vm
    ethereum/shanghai/vm/instructions
    ethereum/shanghai/vm/precompiled_contracts
    ethereum/cancun
    ethereum/cancun/utils
    ethereum/cancun/vm
    ethereum/cancun/vm/instructions
    ethereum/cancun/vm/precompiled_contracts


package_dir =
    =src

python_requires = >=3.10
install_requires =
    pycryptodome>=3,<4
    coincurve>=18,<19
    typing_extensions>=4
    eth2spec @ git+https://github.com/ethereum/consensus-specs.git@d302b35d40c72842d444ef2ea64344e3cb889804

[options.package_data]
ethereum =
    py.typed
    assets/mainnet.json
    assets/mainnet_genesis_alloc_rlp.hex
    assets/cache_sizes_2048_epochs.json
    assets/dataset_sizes_2048_epochs.json
    assets/blocks/block_1.json
    assets/blocks/block_1234567.json
    assets/blocks/block_12964999.json

ethereum_spec_tools =
    py.typed

[options.entry_points]
console_scripts =
    ethereum-spec-lint = ethereum_spec_tools.lint:main
    ethereum-spec-sync = ethereum_spec_tools.sync:main
    ethereum-spec-new-fork = ethereum_spec_tools.new_fork:main
    ethereum-spec-patch = ethereum_spec_tools.patch_tool:main
    ethereum-spec-evm = ethereum_spec_tools.evm_tools:main

docc.plugins =
    ethereum_spec_tools.docc.discover = ethereum_spec_tools.docc:EthereumDiscover
    ethereum_spec_tools.docc.build = ethereum_spec_tools.docc:EthereumBuilder
    ethereum_spec_tools.docc.fix-indexes = ethereum_spec_tools.docc:FixIndexTransform
    ethereum_spec_tools.docc.minimize-diffs = ethereum_spec_tools.docc:MinimizeDiffsTransform

docc.plugins.html =
    ethereum_spec_tools.docc:DiffNode = ethereum_spec_tools.docc:render_diff
    ethereum_spec_tools.docc:BeforeNode = ethereum_spec_tools.docc:render_before_after
    ethereum_spec_tools.docc:AfterNode = ethereum_spec_tools.docc:render_before_after

[options.extras_require]
test =
    pytest>=7.4.0,<8
    pytest-cov>=4.1.0,<5
    pytest-xdist>=3.3.1,<4
    GitPython>=3.1.0,<3.2
    filelock>=3.12.3,<3.13
    platformdirs>=4.2,<5
    requests

lint =
    types-setuptools>=68.1.0.1,<69
    isort==5.13.2
    mypy==1.5.1
    black==23.12.0
    flake8==6.1.0
    flake8-bugbear==23.12.2
    flake8-docstrings==1.7.0
    flake8-spellcheck==0.28.0

doc =
    docc>=0.2.0,<0.3.0
    fladrif>=0.2.0,<0.3.0

optimized =
    rust-pyspec-glue>=0.0.7,<0.1.0
    ethash @ git+https://github.com/chfast/ethash.git@e08bd0fadb8785f7ccf1e2fb07b75f54fe47f92e

[flake8]
dictionaries=en_US,python,technical
docstring-convention = all
extend-ignore =
    E203
    D107
    D200
    D203
    D205
    D212
    D400
    D401
    D410
    D411
    D412
    D413
    D414
    D415
    D416

extend-exclude =
    setup.py
    doc/

per-file-ignores =
    src/ethereum/base_types.py:D105,SC100,SC200

# vim: set ft=dosini:
